--- a/01.Historia.tex
+++ b/01.Historia.tex
@@ -35,7 +35,7 @@
 			\emph{La expresión “música atonal” es de lo más desafortunada -- es como llamar a volar “el arte de no caer” o nadar “el arte de no ahogarse”.}\footnote{A. Schoenberg, \emph{Hauer's Theories}, en \emph{Style and Idea}, 1923.}
 		\end{quote}
 				
-		A este periodo pertenece también su famoso ciclo de canciones \emph{Pierrot Lunaire}, Op. 21. Su nombre completo es "Tres veces siete poemas de Pierrot Lunaire de Albert Giraud", ya que está dividida en 3 grupos de 7 canciones cada uno, cuyos textos son una selección de 21 poemas del ciclo homónimo de Albert Giraud. 
+		A este periodo pertenece también su famoso ciclo de canciones \emph{Pierrot Lunaire}, Op. 21. Su nombre completo es ``Tres veces siete poemas de Pierrot Lunaire de Albert Giraud'', ya que está dividida en 3 grupos de 7 canciones cada uno, cuyos textos son una selección de 21 poemas del ciclo homónimo de Albert Giraud. 
 		
 		Se encuentran en ella abundantes referencias al número 7: Schoenberg hace un uso extensivo de motivos de 7 notas a lo largo de la obra, mientras que el conjunto musical que la interpreta, incluyendo al director, consta de 7 miembros. De hecho, a este conjunto de instrumentos -- flauta, clarinete, violín, violonchelo, piano y cantante -- se le ha dado el nombre de ensemble Pierrot en su honor. Otros números importantes en la obra son el 3 y el 13. Cada poema consiste de 13 líneas, mientras que la primera línea de cada poema aparece 3 veces: en las líneas 1, 7 y 13.
 		
