--- a/Anexos/D.Comm.tex
+++ b/Anexos/D.Comm.tex
@@ -1,4 +1,4 @@
-	\chapter[Conmutatividad del grupo D$_{12}$ x D$_{12}$]{Conmutatividad del grupo \\D$_{\textbf{12}}$ x D$_{\textbf{12}}$}
+	\chapter[Conmutatividad del grupo D$_{\textbf{12}}$ x D$_{\textbf{12}}$]{Conmutatividad del grupo \\D$_{\textbf{12}}$ x D$_{\textbf{12}}$}
 	\label{app:commm}
 		\vspace{-1cm}\underline{S y T no conmutan:}
 		
