--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -28,7 +28,8 @@
 			(2005)
 			
 			\bibitem{delgado}
-			Clases y material de Historia de la Música, 5$^{\circ}$ y 6$^{\circ}$ de Enseñanzas Profesionales del Conservatorio Profesional de Música Arturo Soria, cursos 2014-15 y 2015-16. Prof. Fernando Delgado García.
+			{\sc Prof. Fernando Delgado García.} 
+			Clases y material de Historia de la Música, 5$^{\circ}$ y 6$^{\circ}$ de Enseñanzas Profesionales del Conservatorio Profesional de Música Arturo Soria, cursos 2014-15 y 2015-16.
 			
 			\bibitem{dominguez}
 			{\sc Domínguez Romero, Manuel.} 
@@ -45,7 +46,7 @@
 			
 			\bibitem{clercq}
 			{\sc Clercq, Trevor de.} 
-			\textit{A Window into Tonality via the Structure of Schoenberg's "Musette" from the Piano Suite, op. 25},
+			\textit{A Window into Tonality via the Structure of Schoenberg's ``Musette'' from the Piano Suite, op. 25},
 			Theory/Analysis of 20th-Century Music.
 			Prof. David Headlam
 			(2006)
@@ -100,6 +101,12 @@
 			\textit{How Rare Is Symmetry in Musical 12-Tone Rows?},
 			The American Mathematical Monthly, Vol. 110, No. 2
 			(2003).
+			
+			\bibitem{polygons}
+			{\sc Golomb, S. W., Welch, L. R.}
+			\textit{On the enumeration of polygons},
+			The American Mathematical Monthly, Vol. 67, 349-353
+			(1960).
 			
 			\bibitem{reiner}
 			{\sc Reiner, David L.}
