--- a/07.Espectros.tex
+++ b/07.Espectros.tex
@@ -69,8 +69,8 @@
 		$$=\frac{n}{2}\cdot(n-2)(n-4)\ldots4\cdot2=\frac{n}{2}\cdot(n-2)!!$$
 			\newpage
 	\subsection{SUMA COMPLETA}
-		\def\arraystretch{1.5}
 		Como ya se ha podido observar, el número de espectros seriales varía según la paridad de la longitud de las series.		
+		\def\arraystretch{1.5}
 		$$\begin{array}{c|c|c|c|c}
 		&\{\text{Id, I}\}&\{\text{Id, R}\}&\{\text{Id, RI}\}&\#\sigma_2\\\hline
 		n\text{ impar}&0&0&(n-1)!!&(n-1)!!\\\hline
@@ -97,9 +97,9 @@
 		
 		Así, con la fórmula para $n$ impar, se obtiene que hay 192 espectros seriales con series de longitud 7.
 	
-	\section{ESPECTROS DEL GRUPO COMPLETO}
+	\section[ESPECTROS DEL GRUPO D$_{n}$ x D$_{n}$]{ESPECTROS DEL GRUPO D$_{\textbf{\textit{n}}}$ x D$_{\textbf{\textit{n}}}$}
 	
-		\begin{wrapfigure}{R}{0.25\textwidth}
+		\begin{wrapfigure}{L}{0.25\textwidth}
 			\vspace{-0.5cm}
 			\begin{tikzpicture}[rotate=30*4,minimum height=0pt,inner sep=0pt,outer sep=0pt,scale=0.75]
 			\foreach \x in {0,...,11} {\node (\x) at (90-30*\x:1.6) {};};
@@ -111,30 +111,24 @@
 			
 			%\caption*{\begin{center}{\footnotesize Espectro serial de la Suite Op. 25}\end{center}}
 		\end{wrapfigure}
-		Ahora se quiere averiguar el número de espectros seriales formados mediante todas las transformaciones: \{S,T,V,C\}. Volviendo a la representación mediante diagramas de reloj, el problema es equivalente a averiguar cuántos diagramas distintos, sin números ni flechas, se pueden dibujar. La flecha indica lo transformado por la V y la C, mientras que los números indican lo transformado por la S y la T. Un diagrama sin estos dos elementos representa entonces todo un espectro serial.
-		
-		------
-		
-		De nuevo, por el lema de Burnside:	
+		Ahora se calcularán los espectros formados mediante todas las transformaciones del grupo generado por \{S,T,V,C\}. Volviendo a la representación mediante diagramas de reloj del apartado \ref{diagramas}, el problema es equivalente a averiguar cuántos diagramas distintos, sin números ni flechas, se pueden dibujar. La flecha indica lo transformado por V y C, mientras que los números indican lo transformado por S y T. Un diagrama sin estos dos elementos representa entonces todo un espectro serial. ¿Cuántos diagramas esencialmente distintos hay? De nuevo, por el lema de Burnside:	
 		$$\#\text{Spec}=\#Orb=\frac{1}{|\text{D}_{n}\times\text{D}_{n}|}\sum_{\sigma\in\text{S}_n}|\text{Stab}(\sigma)|=\frac{1}{2n\cdot2n}\sum_{\sigma\in\text{S}_n}|\text{Stab}(\sigma)|$$
 		
-		En vez de expresar la suma como ``para cada $\sigma$, el número de $\Psi$ que fijan $\sigma$", se puede expresar como ``para cada $\Psi$, el número de $\sigma$ fijados por $\Psi$". La fórmula queda de esta manera:
-		$$\#\text{Spec}=\frac{1}{4n^2}\sum_{\Psi\in\text{G}}\text{Fij}(\Psi)$$
-		
-		No hay elementos estables mediante C y R solamente.
+		En vez de expresar el sumatorio como ``para cada $\sigma$, el número de $\Psi$ que fijan $\sigma$'', se puede expresar como ``para cada $\Psi$, el número de $\sigma$ fijados por $\Psi$''. La fórmula queda de esta manera:
+		$\#\text{Spec}=\frac{1}{4n^2}\sum_{\Psi\in\text{D}_{n}\times\text{D}_{n}}\text{Fij}(\Psi)$. Ahora hay que averiguar para cada elemento de $\text{D}_{n}\times\text{D}_{n}$ cuántas series estabiliza. Por ejemplo, trivialmente no hay permutaciones estables mediante C y R solamente.
 		
 		Los elementos estables mediante T$^\text{k}$ son a los que se aplica una rotación de $\uptheta_\text{k}=\frac{2\pi\text{k}}{n}$, para $1\leq\text{k}\leq n$, y quedan igual. Por tanto, los sumandos que aportan a la suma total son $\sum_{\text{k}=1}^{n}\text{Fij}(\uptheta_\text{k})$.
 		
-		Por otro lado, si $1\leq p,q\leq n$ y $gcd(n,p)=gcd(n,q)$ entonces $\text{Fij}(\uptheta_p)=\text{Fij}(\uptheta_q)$. Esto permite que se puedan agrupar los sumandos con igual máximo común divisor con respecto a $n$. Si $n=6$, $$\text{Fij}(\uptheta_\text{1})+\text{Fij}(\uptheta_\text{2})+\text{Fij}(\uptheta_\text{3})+\text{Fij}(\uptheta_\text{4})+\text{Fij}(\uptheta_\text{5})+\text{Fij}(\uptheta_\text{6})=$$
-		$$\text{Fij}(\uptheta_\text{1})+\text{Fij}(\uptheta_\text{2})+\text{Fij}(\uptheta_\text{3})+\text{Fij}(\uptheta_\text{2})+\text{Fij}(\uptheta_\text{1})+\text{Fij}(\uptheta_\text{6})=$$
-		$$2\cdot\text{Fij}(\uptheta_\text{1})+2\cdot\text{Fij}(\uptheta_\text{2})+1\cdot\text{Fij}(\uptheta_\text{3})+1\cdot\text{Fij}(\uptheta_\text{6})$$
+		Por otro lado, si $1\leq p,q\leq n$ y $gcd(n,p)=gcd(n,q)$ entonces $\text{Fij}(\uptheta_p)=\text{Fij}(\uptheta_q)$. Esto permite que se puedan agrupar los sumandos con igual máximo común divisor con respecto a $n$. Si $n=6$: 
+		
+		$\text{Fij}(\uptheta_\text{1})+\text{Fij}(\uptheta_\text{2})+\text{Fij}(\uptheta_\text{3})+\text{Fij}(\uptheta_\text{4})+\text{Fij}(\uptheta_\text{5})+\text{Fij}(\uptheta_\text{6})=%\hspace*{\hfill}
+		\text{Fij}(\uptheta_\text{1})+\text{Fij}(\uptheta_\text{2})+\text{Fij}(\uptheta_\text{3})+\text{Fij}(\uptheta_\text{2})+\text{Fij}(\uptheta_\text{1})+\text{Fij}(\uptheta_\text{6})=%\hspace*{\hfill}
+		2\cdot\text{Fij}(\uptheta_\text{1})+2\cdot\text{Fij}(\uptheta_\text{2})+1\cdot\text{Fij}(\uptheta_\text{3})+1\cdot\text{Fij}(\uptheta_\text{6})$
 		
 		Esos coeficientes son el número de \textit{totativos} de cada divisor $d$ de $n$, pero en orden contrario. Es decir, los totativos de $\frac{n}{d}$, que es el divisor opuesto a $d$. Los totativos de un número son los números menores que él y coprimos con él. La función que indica cuántos totativos tiene un número $n$ se llama la función $\varphi$ de Euler. Entonces $\sum_{\text{k}=1}^{n}\text{Fij}(\uptheta_\text{k})=\sum_{d|n}\left(\varphi(\frac{n}{d})\cdot\text{Fij}(\uptheta_d)\right)$.
 		
-		Para calcular $\text{Fij}(\uptheta_d)$ hay que analizar el método de construcción de diagramas invariantes respecto a una rotación. Estos diagramas deben tener varios loops iguales entre sí pero cada uno desde un punto distinto: desde cada múltiplo de $d$. El número de loops es, por tanto, $\frac{n}{d}$.
-		
-		\begin{wrapfigure}{R}{0.23\textwidth}
-			\vspace{-0.5cm}
+		\begin{wrapfigure}{R}{0.15\textwidth}
+			\vspace{0.5cm}
 			\begin{tikzpicture}[minimum height=0pt,inner sep=0pt,outer sep=0pt,scale=0.75]
 			\foreach \x in {0,...,5} {\node at (90-60*\x:2) {\x}; \node (\x) at (90-60*\x:1.6) {};};
 			
@@ -176,19 +170,44 @@
 			\vspace{-0.5cm}
 		\end{wrapfigure}
 		
+		Para calcular $\text{Fij}(\uptheta_d)$ hay que analizar el método de construcción de diagramas invariantes respecto a una rotación. Estos diagramas deben tener varios loops iguales entre sí pero cada uno desde un punto distinto: desde cada múltiplo de $d$. El número de loops es, por tanto, $\frac{n}{d}$.
+		
 		Al construir uno de estos diagramas, se escoge la primera nota entre las $n$. Después, se escoge la segunda, pero no se puede escoger los vértices múltiplos de $d$ (de los que hay $\frac{n}{d}$), ya que van a ser el comienzo de los sucesivos loops. Hay entonces $n-\frac{n}{d}$ posibilidades. Después se escoge la tercera, pero sin escoger los múltiplos de $d$ ni los múltiplos de $d\ +$ la segunda posición. Hay $n - 2\cdot\frac{n}{d}$ posibilidades, y así sucesivamente hasta terminar el primer loop:
 		$$n\left(n-\frac{n}{d}\right)\left(n-\frac{2n}{d}\right)\cdots\left(n-\frac{(d-1)n}{d}\right)=$$ 
 		$$=n^d\left(1-\frac{1}{d}\right)\left(1-\frac{2}{d}\right)\cdots\left(1-\frac{d-1}{d}\right)=$$
 		$$=n^d\left(\frac{d-1}{d}\right)\left(\frac{d-2}{d}\right)\cdots\left(\frac{1}{d}\right)=n^d\cdot\frac{(d-1)!}{d^{d-1}}\cdot\frac{d}{d}=\left(\frac{n}{d}\right)^d\cdot d!$$
 		
-		Para escoger el segundo loop, su primera nota debe caer en el conjunto de vértices múltiplos de $d$, y se puede escoger de $\varphi\left(\frac{n}{d}\right)$ formas. No son $\frac{n}{d}$ ya que tomar un vértice no coprimo implicaría que el polígono se cerraría antes de tiempo sin pasar por todos los vértices. Tras esto el polígono está totalmente determinado mediante la pauta dentro del loop y la transición de un loop a otro.
+		Para escoger el segundo loop, su primera nota debe caer en el conjunto de vértices múltiplos de $d$, y se puede escoger de $\varphi\left(\frac{n}{d}\right)$ formas. No son $\frac{n}{d}$ ya que tomar un vértice no coprimo implicaría que el polígono se cerraría antes de tiempo sin pasar por todos los vértices. Tras esto el polígono está totalmente determinado, y se puede formar de $\sum_{d|n}\left(\varphi^2(\frac{n}{d})\cdot\left(\frac{n}{d}\right)^d\cdot d!\right)$ maneras.
 		
-		Para $n$ par hay otro método de construcción de polígono invariante mediante T, V y C a la vez, ya que al rotar $\frac{n}{2}$ el diagrama puede llegar con la orientación cambiada. A la derecha hay un ejemplo de ello. Esto puede ocurrir porque entre dos notas hay un intervalo -- un salto -- de $\frac{n}{2}$.
+		Solamente para $n$ par hay un método más de construcción de polígono invariante mediante T, V y C a la vez, ya que al rotar $\frac{n}{2}$ el diagrama puede llegar con la orientación cambiada. A la derecha hay un ejemplo de ello. Esto puede ocurrir cuando entre dos notas haya un intervalo -- un salto -- de $\frac{n}{2}$.
 		
-		Primero se dibuja la diagonal.
+		Primero se escoge la diagonal de entre $\frac{n}{2}$ posibilidades, con lo que queda dividida en dos la figura. De cada pareja de puntos antipodales se escoge el que irá primero en la ronda de elección. Esa elección para cada pareja opuesta se da de de $2^{\frac{n}{2}}$ formas. Tras lo cual se ordenan esos primeros miembros entre sí, de $\frac{n}{2}!$ formas. Esto lleva a las $\frac{n}{2}\cdot2^{\frac{n}{2}}\cdot\frac{n}{2}!$ formas de dibujar un polígono con las características buscadas.
 		
-		Por tanto, una diagonal de este tipo se puede dibujar de $\frac{n}{2}$ formas. La elección de un miembro de cada pareja opuesta se da de $2^{n}{2}$ formas. Los primeros miembros pueden ordenarse secuencialmente de $\left(\frac{n}{2}\right)!$ formas.
-	
+		Los elementos estables mediante I son aquellos que quedan invariantes mediante reflexiones. En este punto se ha de separar por paridad de $n$. Para $n$ impar, existen reflexiones para cada uno de los ejes de simetría que pasan por cada vértice. Se puede escoger dicho eje de $n$ formas. Después, hay $n$ formas de escoger el primer vértice de la secuencia. Ahora hay $\frac{n-1}{2}$ parejas de vértices; se escoge los primeros miembros entre ellos de $2^{\frac{n-1}{2}}$ formas, tras lo cual éstos se ordenan de $\frac{n-1}{2}!$ formas. Esto da un resultado de  $n^2\cdot2^{\frac{n-1}{2}}\cdot\frac{n-1}{2}!$ polígonos invariantes.
+		
+		Para $n$ par se tienen las simetrías con ejes que pasan por vértices y ejes que pasan por lados. Para las simetrías con ejes que pasan por vértices, se puede escoger dicho eje de $\frac{n}{2}$ formas. Después, hay $n$ formas de escoger el primer vértice de la secuencia. Ahora hay $\frac{n}{2}$ parejas de vértices; se escoge los primeros miembros entre ellos de $2^{\frac{n}{2}}$ formas, tras lo cual éstos se ordenan de $\left(\frac{n}{2}-1\right)!$ formas. No son $\frac{n-1}{2}!$ porque el primero ya está escogido: debe ser el del eje. Esto da un resultado de  $\frac{n^2}{2}\cdot2^{\frac{n}{2}}\cdot\left(\frac{n}{2}-1\right)!$ polígonos invariantes.
+		
+		Para las simetrías con ejes que pasan por lados, se puede escoger dicho eje de $\frac{n}{2}$ formas. Después, hay $n$ formas de escoger el primer vértice de la secuencia. Ahora hay $\frac{n}{2}-1$ parejas de vértices -- no hay $\frac{n}{2}$ porque la primera pareja ya se ha escogido --; se escoge los primeros miembros entre ellos de $2^{\frac{n}{2}-1}$ formas, tras lo cual éstos se ordenan de $\frac{n}{2}!$ formas. Esto da un resultado de $\frac{n^2}{2}\cdot2^{\frac{n}{2}-1}\cdot\frac{n}{2}!$ polígonos invariantes.
+		
+		En resumen, estos son los numeradores $\sum_{\Psi\in\text{D}_{n}\times\text{D}_{n}}\text{Fij}(\Psi)$. El resultado final del número de diagramas posibles, o espectros seriales distintos, es dicho numerador entre $4n^2$, el tamaño del grupo. \footnote{Este apartado es una explicación detallada del artículo \cite{polygons}. La secuencia de números dada por las fórmulas demostradas se encuentra en la OEIS (On-Line Encyclopedia of Integer Sequences): \textit{https://oeis.org/A000940}}		
+		\def\arraystretch{1.25}
+		$$\begin{array}{c||c}
+		&\textbf{\textit{n} IMPAR}\\\hline\hline
+		\text{Rotación}&\sum_{d|n}\left(\varphi^2(\frac{n}{d})\cdot\left(\frac{n}{d}\right)^d\cdot d!\right)\\\hline
+		\text{Reflexión}&n^2\cdot2^{\frac{n-1}{2}}\cdot\frac{n-1}{2}!\\\hline
+		&\sum_{d|n}\left(\varphi^2(\frac{n}{d})\cdot\left(\frac{n}{d}\right)^d\cdot d!\right)+n^2\cdot2^{\frac{n-1}{2}}\cdot\frac{n-1}{2}!\\
+		\end{array}$$
+		
+		$$\begin{array}{c||c}
+		&\textbf{\textit{n} PAR}\\\hline\hline
+		\text{Rotación}&\sum_{d|n}\left(\varphi^2(\frac{n}{d})\cdot\left(\frac{n}{d}\right)^d\cdot d!\right)\\\hline
+		\text{Rotación con orientación}&\frac{n}{2}\cdot2^{\frac{n}{2}}\cdot\frac{n}{2}!\\\hline
+		\text{Reflexión por vértices}&\frac{n^2}{2}\cdot2^{\frac{n}{2}}\cdot\left(\frac{n}{2}-1\right)!\\\hline
+		\text{Reflexión por lados}&\frac{n^2}{2}\cdot2^{\frac{n}{2}-1}\cdot\frac{n}{2}!\\\hline
+		&\sum_{d|n}\left(\varphi^2(\frac{n}{d})\cdot\left(\frac{n}{d}\right)^d\cdot d!\right)+\frac{n(n+6)}{4}\cdot2^{\frac{n}{2}}\cdot\frac{n}{2}!\\
+		\end{array}$$
+		\def\arraystretch{1}
+		
 	\newpage
 		
 	\section{MEDEFONISMO, MONOFONISMO Y DIFONISMO}
