--- a/Bibliotecas.tex
+++ b/Bibliotecas.tex
@@ -5,9 +5,12 @@
 % Matemáticas
 \usepackage{amsmath}
 
+\usepackage{enumerate}
+
 % Letras raras de matemáticas
 \usepackage{amsfonts}
 \usepackage{upgreek}
+\usepackage{amssymb}
 
 % QED
 \usepackage{amsthm}
