propiedades de las escalas

--- a/07.Espectros.tex
+++ b/07.Espectros.tex
@@ -1,5 +1,5 @@
 	\chapter{CONTEO DE ESPECTROS SERIALES}
-	\section{ESPECTROS DEL GRUPO DE SCHOENBERG: \{I, T, R\}}
+	\section{ESPECTROS DE LAS FUNCIONES \{I, T, R\}}
 		\label{espec}		
 		
 		\begin{wrapfigure}{R}{0.25\textwidth}
@@ -36,7 +36,7 @@
 		
 		Así, $\sigma(m)$ sería constante para todo $m\in \mathbb{Z} / (n)$, lo cual es imposible. Esto implica que ninguna permutación va a tener a I en su estabilizador, por lo que $\#\sigma_4=0$. Queda entonces calcular cuántas permutaciones son equivalentes a su retrogradación y cuántas a su retrogradación inversa. La suma de ambas dará $\#\sigma_2$.
 	
-	\subsection{ESTABILIZADORES \{ID, R\}}
+	\subsection*{ESTABILIZADORES \{ID, R\}}
 		Las permutaciones que coinciden con alguna transposición de su retrogradación cumplen, para $\gamma$ constante:
 		$$\gamma+\sigma(m)=\text{R}(\sigma(m))=\sigma(-1-m)$$
 		Aplicándolo a $(-1-m)$: $\qquad\gamma+\sigma(-1-m)=\sigma(-1-(-1-m))=\sigma(m)$
@@ -49,7 +49,7 @@
 		En una serie de longitud $n$, existen $\frac{n}{2}$ intervalos que miden $\frac{n}{2}$. Como no importa por cuál de ellos comience la serie, ya que las transportaciones son equivalentes, se fija el primero de los intervalos. Quedan los otros $\frac{n}{2}-1$ intervalos por escoger, así que el número de series con simetría par cuenta las permutaciones de $\frac{n}{2}-1$ intervalos y las dos posibles posiciones de cada intervalo -- creciente y decreciente --. \cite{reiner} Por ello, el número de series con simetría par es de:
 		$$2! \cdot \left(\frac{n}{2}-1\right)! = 2\left(\frac{n-2}{2}\right)!=(n-2)(n-4)\ldots=(n-2)!!\ \footnote{Por definición, si $n$ es par $n!!=n(n-2)(n-4)\ldots4\cdot2$ y si $n$ es impar $n!!=n(n-2)(n-4)\ldots3\cdot1$.}$$
 
-	\subsection{ESTABILIZADORES \{ID, RI\}}
+	\subsection*{ESTABILIZADORES \{ID, RI\}}
 		Las permutaciones que coinciden con alguna transposición de su retrogradación inversa cumplen, para un $\gamma$ constante:
 		$$\sigma(m)=\text{RI}(\sigma(m))+\gamma=-\sigma(-1-m)+\gamma$$
 		$$\gamma=\sigma(m)+\sigma(-1-m)$$
@@ -68,7 +68,7 @@
 		$$=\frac{n}{2}\cdot(n-2)(n-4)\ldots(n-(n-4))(n-(n-2))=$$
 		$$=\frac{n}{2}\cdot(n-2)(n-4)\ldots4\cdot2=\frac{n}{2}\cdot(n-2)!!$$
 			\newpage
-	\subsection{SUMA COMPLETA}
+	\subsection*{SUMA COMPLETA}
 		Como ya se ha podido observar, el número de espectros seriales varía según la paridad de la longitud de las series.		
 		\def\arraystretch{1.5}
 		$$\begin{array}{c|c|c|c|c}
@@ -116,6 +116,8 @@
 		
 		En vez de expresar el sumatorio como ``para cada $\sigma$, el número de $\Psi$ que fijan $\sigma$'', se puede expresar como ``para cada $\Psi$, el número de $\sigma$ fijados por $\Psi$''. La fórmula queda de esta manera:
 		$\#\text{Spec}=\frac{1}{4n^2}\sum_{\Psi\in\text{D}_{n}\times\text{D}_{n}}\text{Fij}(\Psi)$. Ahora hay que averiguar para cada elemento de $\text{D}_{n}\times\text{D}_{n}$ cuántas series estabiliza. Por ejemplo, trivialmente no hay permutaciones estables mediante C y R solamente.
+		
+		\subsection*{ELEMENTOS ESTABLES MEDIANTE T}
 		
 		Los elementos estables mediante T$^\text{k}$ son a los que se aplica una rotación de $\uptheta_\text{k}=\frac{2\pi\text{k}}{n}$, para $1\leq\text{k}\leq n$, y quedan igual. Por tanto, los sumandos que aportan a la suma total son $\sum_{\text{k}=1}^{n}\text{Fij}(\uptheta_\text{k})$.
 		
@@ -181,15 +183,19 @@
 		
 		Solamente para $n$ par hay un método más de construcción de polígono invariante mediante T, V y C a la vez, ya que al rotar $\frac{n}{2}$ el diagrama puede llegar con la orientación cambiada. A la derecha hay un ejemplo de ello. Esto puede ocurrir cuando entre dos notas haya un intervalo -- un salto -- de $\frac{n}{2}$.
 		
-		Primero se escoge la diagonal de entre $\frac{n}{2}$ posibilidades, con lo que queda dividida en dos la figura. De cada pareja de puntos antipodales se escoge el que irá primero en la ronda de elección. Esa elección para cada pareja opuesta se da de de $2^{\frac{n}{2}}$ formas. Tras lo cual se ordenan esos primeros miembros entre sí, de $\frac{n}{2}!$ formas. Esto lleva a las $\frac{n}{2}\cdot2^{\frac{n}{2}}\cdot\frac{n}{2}!$ formas de dibujar un polígono con las características buscadas.
+		Primero se escoge la diagonal de entre $\frac{n}{2}$ posibilidades, con lo que queda dividida en dos la figura. De cada pareja de puntos antipodales se escoge el que irá primero en la ronda de elección. Esa elección para cada pareja opuesta se da de de $2^{\frac{n}{2}}$ formas. Tras lo cual se ordenan esos primeros miembros entre sí, de $\frac{n}{2}!$ formas. Esto lleva a las $\frac{n}{2}\cdot2^{\frac{n}{2}}\cdot\frac{n}{2}!$ formas de dibujar un polígono con las características buscadas.		
 		
-		Los elementos estables mediante I son aquellos que quedan invariantes mediante reflexiones. En este punto se ha de separar por paridad de $n$. Para $n$ impar, existen reflexiones para cada uno de los ejes de simetría que pasan por cada vértice. Se puede escoger dicho eje de $n$ formas. Después, hay $n$ formas de escoger el primer vértice de la secuencia. Ahora hay $\frac{n-1}{2}$ parejas de vértices; se escoge los primeros miembros entre ellos de $2^{\frac{n-1}{2}}$ formas, tras lo cual éstos se ordenan de $\frac{n-1}{2}!$ formas. Esto da un resultado de  $n^2\cdot2^{\frac{n-1}{2}}\cdot\frac{n-1}{2}!$ polígonos invariantes.
+		\subsection*{ELEMENTOS ESTABLES MEDIANTE I}
 		
-		Para $n$ par se tienen las simetrías con ejes que pasan por vértices y ejes que pasan por lados. Para las simetrías con ejes que pasan por vértices, se puede escoger dicho eje de $\frac{n}{2}$ formas. Después, hay $n$ formas de escoger el primer vértice de la secuencia. Ahora hay $\frac{n}{2}$ parejas de vértices; se escoge los primeros miembros entre ellos de $2^{\frac{n}{2}}$ formas, tras lo cual éstos se ordenan de $\left(\frac{n}{2}-1\right)!$ formas. No son $\frac{n-1}{2}!$ porque el primero ya está escogido: debe ser el del eje. Esto da un resultado de  $\frac{n^2}{2}\cdot2^{\frac{n}{2}}\cdot\left(\frac{n}{2}-1\right)!$ polígonos invariantes.
+		Los elementos estables mediante I son aquellos que quedan invariantes mediante reflexiones. En este punto se ha de separar por paridad de $n$. 
 		
-		Para las simetrías con ejes que pasan por lados, se puede escoger dicho eje de $\frac{n}{2}$ formas. Después, hay $n$ formas de escoger el primer vértice de la secuencia. Ahora hay $\frac{n}{2}-1$ parejas de vértices -- no hay $\frac{n}{2}$ porque la primera pareja ya se ha escogido --; se escoge los primeros miembros entre ellos de $2^{\frac{n}{2}-1}$ formas, tras lo cual éstos se ordenan de $\frac{n}{2}!$ formas. Esto da un resultado de $\frac{n^2}{2}\cdot2^{\frac{n}{2}-1}\cdot\frac{n}{2}!$ polígonos invariantes.
+		Para $n$ impar, existen $n$ reflexiones para cada uno de los ejes de simetría que pasan por cada vértice. Después, hay $n$ formas de escoger el primer vértice de la secuencia. Ahora hay $\frac{n-1}{2}$ parejas de vértices; se escoge los primeros miembros entre ellos de $2^{\frac{n-1}{2}}$ formas, tras lo cual éstos se ordenan de $\frac{n-1}{2}!$ formas. Esto da un resultado de  $n^2\cdot2^{\frac{n-1}{2}}\cdot\frac{n-1}{2}!$ polígonos invariantes.
 		
-		En resumen, estos son los numeradores $\sum_{\Psi\in\text{D}_{n}\times\text{D}_{n}}\text{Fij}(\Psi)$. El resultado final del número de diagramas posibles, o espectros seriales distintos, es dicho numerador entre $4n^2$, el tamaño del grupo. \footnote{Este apartado es una explicación detallada del artículo \cite{polygons}. La secuencia de números dada por las fórmulas demostradas se encuentra en la OEIS (On-Line Encyclopedia of Integer Sequences): \textit{https://oeis.org/A000940}}		
+		Para $n$ par se tienen dos simetrías: con ejes que pasan por vértices y con ejes que pasan por lados. De manera similar a la anterior, se escoge el eje, el primer vértice, los primeros miembros de las parejas de vértices y se ordenan. Para las simetrías con ejes que pasan por vértices, da un resultado de  $\frac{n^2}{2}\cdot2^{\frac{n}{2}}\cdot\left(\frac{n}{2}-1\right)!$. Para las simetrías con ejes que pasan por lados, da un resultado de $\frac{n^2}{2}\cdot2^{\frac{n}{2}-1}\cdot\frac{n}{2}!$.
+		
+		\subsection*{SUMA COMPLETA}
+		
+		En resumen, estos son los numeradores $\sum_{\Psi\in\text{D}_{n}\times\text{D}_{n}}\text{Fij}(\Psi)$. El resultado final del número de diagramas posibles, o espectros seriales distintos, es dicho numerador entre $4n^2$, el tamaño del grupo. \footnote{Este apartado es una explicación detallada del artículo \cite{polygons}. La secuencia de números dada por las fórmulas demostradas se encuentra en la OEIS: \textit{https://oeis.org/A000940}}		
 		\def\arraystretch{1.25}
 		$$\begin{array}{c||c}
 		&\textbf{\textit{n} IMPAR}\\\hline\hline
@@ -207,8 +213,6 @@
 		&\sum_{d|n}\left(\varphi^2(\frac{n}{d})\cdot\left(\frac{n}{d}\right)^d\cdot d!\right)+\frac{n(n+6)}{4}\cdot2^{\frac{n}{2}}\cdot\frac{n}{2}!\\
 		\end{array}$$
 		\def\arraystretch{1}
-		
-	\newpage
 		
 	\section{MEDEFONISMO, MONOFONISMO Y DIFONISMO}
 	\label{monodi}
